deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hltb-proxy
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: web
  type: ClusterIP
